--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9"]
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
 
       - name: Install Dependencies
         run: pip install -r hello-devops/requirements.txt
@@ -23,9 +25,15 @@ jobs:
       - name: Run Tests
         run: python -m unittest discover -s hello-devops
 
-  deploy:
+  notify:
+    needs: [test]
     runs-on: ubuntu-latest
-    needs: test
+    steps:
+      - run: echo "Notifying Slack... (simulation)"
+
+  deploy:
+    needs: [test]
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy App
         run: echo "Deploying application..."
